# reaktor

./: .gitignore  Dockerfile  README.md  app.py  builder.py  docker-compose.yaml  pyproject.toml  run.py
.arkitekt/: builds.yaml  deployments.yaml  manifest.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
